2005-05-06  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkmenutoolbutton.c: Gtk::MenuToolButton.new
	accept nil for icon_widget/label. 

2005-05-05  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkcellview.c: Gtk::CellView#model= allows nil. 
	Gtk::CellView#displayed_row= allows nil.

2005-04-15  Pascal Terjan <pterjan@linuxfr.org>
	
	* src/rbgdktimecoord.c: Fixed a warning of Gdk::TimeCoord#set_axes.
	* src/rbgdkwindow.c: Fixed a warning of Gdk::Window#set_cursor

2005-04-15  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtktreemodel.c: Added Gtk::TreeModel#iter_is_valid?
	Bugs item #1180406 by pdewacht.

2005-03-25  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkrc.c: Fix memory leaks of Gtk::RC.theme_dir, 
	.module_dir, .find_module_in_path.
	Gtk::RC.get_style_by_paths accept nil as the 4th parameter and fix
	when it returns NULL.

2005-03-22  Mirko Maischberger  <mirko@lilik.it>

	* sample/misc/*.rb: sh-bang (!#) normalization.
	* sample/testgtk/testgtk.rb: sh-bang (!#) normalization.
	Reported by Mezz 
	
2005-03-23  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/misc/colorselection.rb: Added.
	* src/rbgtkcolorsel.c: Added Gtk::ColorSelection.set_change_palette_hook.
	Requested by Paul van Tilburg.
	Gtk::ColorSelection.palette_to_string accept an Array as the 1st argument.

2005-03-20  KATO Kazuyoshi  <kzys@8-p.info>

	* sample/gtk-demo/hypertext.rb: Added.
	* sample/gtk-demo/main.rb: Use Sans-Serif and Monospace font.
	* sample/gtk-demo/main.rb (Demo::Main::load_file): Remove depend field in title.

2005-03-12  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtk.c: Use g_main_context_set_poll_func instead of
	g_main_set_poll_func.
	* src/rbgtkicontheme.c: Fix a memory leak of Gtk::IconTheme#icons. 

2005-03-12  Hiroyuki Ikezoe <poincare@ikezoe.net>

	* src/rbgtkactiongroup.c: Gtk::ActionGroup#set_translate_domain 
	accept nil as domain. 

2005-03-06  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkliststore.c: Fix a warning. 